# my-discord-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DAVE_LIMITATION.md  README.md  bot.js  bot.py  config.yaml  main.py  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml  test-find-senryu-bot.yml
.omc/: prd.json  project-memory.json
.omc/handoffs/: team-plan.md  team-verify.md
.omc/plans/: chat-summary-bot-plan.md  discordvoicevox-docker-compose.md  musicbot-discordjs-rewrite.md  musicbot-queue-gui-editor.md  musicbot-shuffle-exclude-played.md  musicbot-skip-fix.md  musicbot-volume-normalize.md  musicbot-webui-playlist-login-plan.md  open-questions.md  vc-disconnect-bot-kino-tsuika.md
.omc/sessions/: 3bfbdefd-d365-40b1-b1a0-15385b018c54.json  ec65e1b5-c97e-4445-993f-a631f45e29e8.json
.omc/specs/: deep-dive-trace-vc-disconnect-bot-kino-tsuika.md  deep-dive-vc-disconnect-bot-kino-tsuika.md  deep-interview-chat-summary-bot.md  deep-interview-musicbot-search-ephemeral.md  deep-interview-musicbot-webui-playlist-login.md
.omc/state/: agent-replay-ec65e1b5-c97e-4445-993f-a631f45e29e8.jsonl  deep-interview-state.json  hud-state.json  hud-stdin-cache.json  mission-state.json  ralph-state.json  subagent-tracking.json
chat-summary-bot/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  bot.py  collector.py  config.yaml  db.py  docker-compose.yml  llm_client.py  prompts.py  pyproject.toml  scheduler.py
chat-summary-bot/.omc/state/: agent-replay-ec65e1b5-c97e-4445-993f-a631f45e29e8.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
chat-summary-bot/tests/: AGENTS.md  test_collector.py  test_db.py  test_llm_client.py  test_prompts.py
discord-minutes-bot/: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  spec_v04.md
discord-minutes-bot/pipeline/: AGENTS.md  summarizer.py
discord-minutes-bot/tests/: AGENTS.md  conftest.py  test_bot_config.py
discord-minutes-bot/utils/: AGENTS.md  memory.py
find-senryu-bot/: .dockerignore  .env.example  AGENTS.md  README.md  compose.yaml  main.go
find-senryu-bot/cmd/: AGENTS.md
find-senryu-bot/commands/: AGENTS.md  admin.go  (+6 more)
pipeline/: recorder.py  summarizer.py  transcriber.py
tests/: test_bot_config.py  test_chunker.py  test_memory.py
utils/: chunker.py
vc-disconnect-bot/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  bot.py  config.yaml  pyproject.toml  timer.py
(+33 files in other folders)
