[project]
name = "chat-summary-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "py-cord>=2.6",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
